--- a/src/app/components/place-settings/place-settings.component.html
+++ b/src/app/components/place-settings/place-settings.component.html
@@ -32,13 +32,6 @@
         Название
       </li>
 
-      <li class="explanations-li">
-        Просмотры за предыдущий месяц
-      </li>
-
-      <li class="explanations-li">
-        Просмотры за текущий месяц
-      </li>
     </div>
 
     <ul class="cards">
@@ -53,24 +46,11 @@
               {{userCoworking.address}}
             </p>
           </div>
-
           <div class="second-block__card">
-            <p class="number">
-              ?
-            </p>
+            <button class="progress-information__btn" routerLink="/main/add">
+              Редактировать
+            </button>
           </div>
-
-          <div class="third-block__card">
-            <p class="number">
-              ?
-              <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M5.14496 0.625901C5.54214 0.235377 6.18609 0.235377 6.58326 0.625901L11.3298 5.2929C11.7269 5.68343 11.7269 6.31659 11.3298 6.70711C10.9326 7.09764 10.2886 7.09764 9.89146 6.70711L6.88115 3.74722V11C6.88115 11.5523 6.42581 12 5.86411 12C5.30242 12 4.84708 11.5523 4.84708 11V3.74722L1.83677 6.70711C1.43959 7.09764 0.795644 7.09764 0.398468 6.70711C0.00129186 6.31659 0.00129186 5.68343 0.398468 5.2929L5.14496 0.625901Z"
-                  fill="#4AC99B" />
-              </svg>
-            </p>
-          </div>
-
         </div>
       </li>
     </ul>
